--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cf-rich-editor",
-  "version": "1.0.2-beta1.5",
+  "version": "1.0.2-beta1.6",
   "description": "The React rich editor base on draft.js",
   "main": "./lib/index.js",
   "scripts": {
@@ -17,7 +17,10 @@
   ],
   "author": "zhanggl",
   "license": "MIT",
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/longlongago2/RichEditor.git"
+  },
   "devDependencies": {
     "autoprefixer": "^6.7.6",
     "babel-cli": "^6.24.0",
