--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cf-rich-editor",
-  "version": "1.0.2-beta1.7",
+  "version": "1.0.2-beta1.8",
   "description": "The React rich editor base on draft.js",
   "main": "./lib/index.js",
   "scripts": {
     "start": "webpack-dev-server --env.hmr",
     "build-dist": "rimraf dist && webpack --env.dist",
-    "build": "rimraf lib && cross-env BABEL_ENV=production babel src --out-dir lib",
+    "build": "rimraf lib && cross-env BABEL_ENV=production BABEL_DISABLE_CACHE=1 babel src --out-dir lib",
     "prepublish": "npm run build"
   },
   "keywords": [
@@ -28,9 +28,9 @@
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.4.0",
     "babel-plugin-webpack-loaders": "^0.9.0",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
     "colors": "^1.1.2",
     "cross-env": "^3.2.4",
     "css-loader": "^0.26.2",
@@ -41,7 +41,6 @@
     "eslint-plugin-react": "^6.10.0",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
-    "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.2",
     "less-loader": "^3.0.0",
     "open-browser-webpack-plugin": "0.0.5",
@@ -63,6 +62,7 @@
     "classnames": "^2.2.5",
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
-    "immutable": "^3.8.1"
+    "immutable": "^3.8.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
