--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
     "immutable": "^3.8.1",
+    "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.3"
   }
 }
