cf-rich-editor@1.1.2 2017/5/16 更新内容： 1.修复在js内部 require babel-polyfill 仍然报错：regeneratorRuntime is not defined; 2.修复图片上传图标切换为 loading 画面图标时，仍然能点击呼出文件夹 3.修复同一张图片（文件名完全相同）不能连续再次上传 4.dist文件名更改为[name].min.js 和 [name].min.css

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cf-rich-editor",
-  "version": "1.0.9",
+  "version": "1.1.2",
   "description": "The React rich editor base on draft.js",
   "main": "./lib/index.js",
   "scripts": {
     "start": "webpack-dev-server --env.hmr",
-    "build-dist": "rimraf dist && webpack --env.dist",
+    "build-dist": "rimraf dist && webpack -p --progress --env.dist",
     "build": "rimraf lib && cross-env BABEL_ENV=production BABEL_DISABLE_CACHE=1 babel src --out-dir lib --ignore dist-entry.js,demo",
     "prepublish": "npm run build"
   },
@@ -64,6 +64,7 @@
     "draft-js": "^0.10.0",
     "draft-js-export-html": "^0.5.2",
     "immutable": "^3.8.1",
+    "regenerator-runtime": "^0.10.5",
     "uuid": "^3.0.1",
     "whatwg-fetch": "^2.0.3"
   }
