--- a/.eslintrc
+++ b/.eslintrc
@@ -63,6 +63,8 @@
     "no-cond-assign": 1,
     "no-eval": 1,
     "react/require-default-props": 0,
-    "react/no-danger": 0
+    "react/no-danger": 0,
+    "global-require": "warn",
+    "no-param-reassign": "warn"
   }
 }
